--- a/src/pages/Auth/Login.module.scss
+++ b/src/pages/Auth/Login.module.scss
@@ -1,20 +1,31 @@
 .login {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 3;
+  min-width: 300px;
+  // position: absolute;
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
+  // justify-content: center;
+  // height: 100vh;
 
   .panel {
     background-color: white;
     height: 70vh;
-    min-height: 500px;
-    width: 500px;
-    padding: 50px 80px;
+    min-height: 400px;
+    max-width: 400px;
+    padding: 10px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    box-shadow: rgb(0 0 0 / 20%) 0px 3px 3px -2px,
+      rgb(0 0 0 / 14%) 0px 3px 4px 0px, rgb(0 0 0 / 12%) 0px 1px 8px 0px;
+    justify-content: center;
+    border-radius: 8px;
 
     .logo {
       height: 180px;
