--- a/src/pages/Auth/Login.module.scss
+++ b/src/pages/Auth/Login.module.scss
@@ -27,10 +27,12 @@
     justify-content: center;
     border-radius: 8px;
 
-    .logo {
-      height: 180px;
-      width: 180px;
-      margin-bottom: 20px;
+    .fancy {
+      color: var(--g2);
+      font-family: "Dancing Script", cursive;
+      font-size: 4.5em;
+      line-height: 0.9em;
+      padding-bottom: 30px;
     }
 
     .error {
