--- a/src/pages/Auth/Login.module.scss
+++ b/src/pages/Auth/Login.module.scss
@@ -26,6 +26,7 @@
       rgb(0 0 0 / 14%) 0px 3px 4px 0px, rgb(0 0 0 / 12%) 0px 1px 8px 0px;
     justify-content: center;
     border-radius: 8px;
+    // opacity: .8;
 
     .fancy {
       color: var(--g2);
